chore: deb build

--- a/debian/trafficserver.service
+++ b/debian/trafficserver.service
@@ -26,6 +26,9 @@ EnvironmentFile=-/etc/default/trafficserver
 PIDFile=/run/trafficserver/manager.lock
 ExecStart=/usr/bin/traffic_manager $TM_DAEMON_ARGS
 ExecReload=/usr/bin/traffic_ctl config reload
+SuccessExitStatus=15
+TimeoutStopSec=5
+KillMode=mixed
 
 [Install]
 WantedBy=multi-user.target
